@@ -1,5 +1,8 @@
 2010-05-15  TOKI Yoshinori  <toki@freedom.ne.jp>
 
+	* lib/gluon/web/table.rb: self-descriptive method name for table
+	utility.
+
 	* magic comment for runtime ruby scripts.
 
 	* lib/gluon/web/table.rb: each method for loop.
